force-app/main/default/objects/National_Contract_Template__c/National_Contract_Template__c.object-meta.xml
<CustomObject>
    <label>National Contract Template</label>
    <nameField>
        <label>National Contract Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>National Contract Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>