force-app/main/default/objects/National_Contract_Template__c/fields/Conga_Template__c.field-meta.xml
<CustomField>
    <fullName>Conga_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conga Template</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>National Contract Templates</relationshipLabel>
    <relationshipName>National_Contract_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>