force-app/main/default/objects/National_Contract_Template__c/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Edition</label>
    <referenceTo>Edition__c</referenceTo>
    <relationshipLabel>National Contract Templates</relationshipLabel>
    <relationshipName>National_Contract_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>