force-app/main/default/objects/National_Contract_Template__c/fields/Term_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Term_Conditions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Term &amp; Conditions</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>National Contract Templates (Term &amp; Conditions)</relationshipLabel>
    <relationshipName>National_Contract_Templates1</relationshipName>
    <type>Lookup</type>
</CustomField>